--- a/src/output.css
+++ b/src/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.tw-pointer-events-none {
+  pointer-events: none;
+}
+
 .tw-absolute {
   position: absolute;
 }
@@ -596,20 +600,16 @@ video {
   position: relative;
 }
 
-.tw-inset-0 {
-  inset: 0px;
+.tw-right-0 {
+  right: 0px;
 }
 
-.tw-z-10 {
-  z-index: 10;
+.tw-top-0 {
+  top: 0px;
 }
 
 .-tw-m-4 {
   margin: -1rem;
-}
-
-.tw-m-4 {
-  margin: 1rem;
 }
 
 .tw-mx-3 {
@@ -626,28 +626,76 @@ video {
   margin-bottom: 4rem;
 }
 
+.tw-mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .tw-mb-4 {
   margin-bottom: 1rem;
+}
+
+.tw-mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .tw-mb-8 {
   margin-bottom: 2rem;
 }
 
+.tw-ml-1 {
+  margin-left: 0.25rem;
+}
+
+.tw-ml-3 {
+  margin-left: 0.75rem;
+}
+
+.tw-ml-4 {
+  margin-left: 1rem;
+}
+
+.tw-ml-6 {
+  margin-left: 1.5rem;
+}
+
+.tw-ml-auto {
+  margin-left: auto;
+}
+
+.tw-mr-3 {
+  margin-right: 0.75rem;
+}
+
+.tw-mt-1 {
+  margin-top: 0.25rem;
+}
+
+.tw-mt-10 {
+  margin-top: 2.5rem;
+}
+
+.tw-mt-20 {
+  margin-top: 5rem;
+}
+
+.tw-mt-28 {
+  margin-top: 7rem;
+}
+
 .tw-mt-5 {
   margin-top: 1.25rem;
 }
 
-.tw-mb-1 {
-  margin-bottom: 0.25rem;
+.tw-mt-6 {
+  margin-top: 1.5rem;
 }
 
-.tw-mb-20 {
-  margin-bottom: 5rem;
+.tw-mt-3 {
+  margin-top: 0.75rem;
 }
 
-.tw-mb-3 {
-  margin-bottom: 0.75rem;
+.tw-mt-32 {
+  margin-top: 8rem;
 }
 
 .tw-block {
@@ -670,12 +718,66 @@ video {
   display: none;
 }
 
+.tw-h-10 {
+  height: 2.5rem;
+}
+
+.tw-h-12 {
+  height: 3rem;
+}
+
+.tw-h-4 {
+  height: 1rem;
+}
+
+.tw-h-5 {
+  height: 1.25rem;
+}
+
+.tw-h-6 {
+  height: 1.5rem;
+}
+
+.tw-h-64 {
+  height: 16rem;
+}
+
 .tw-h-full {
   height: 100%;
 }
 
+.tw-w-10 {
+  width: 2.5rem;
+}
+
+.tw-w-12 {
+  width: 3rem;
+}
+
+.tw-w-4 {
+  width: 1rem;
+}
+
+.tw-w-5 {
+  width: 1.25rem;
+}
+
+.tw-w-6 {
+  width: 1.5rem;
+}
+
+.tw-w-96 {
+  width: 24rem;
+}
+
 .tw-w-full {
   width: 100%;
+}
+
+.tw-appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .tw-flex-col {
@@ -694,12 +796,40 @@ video {
   justify-content: center;
 }
 
+.tw-justify-between {
+  justify-content: space-between;
+}
+
+.tw-overflow-hidden {
+  overflow: hidden;
+}
+
+.tw-rounded {
+  border-radius: 0.25rem;
+}
+
+.tw-rounded-2xl {
+  border-radius: 1rem;
+}
+
 .tw-rounded-3xl {
   border-radius: 1.5rem;
 }
 
+.tw-rounded-full {
+  border-radius: 9999px;
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .tw-rounded-xl {
   border-radius: 0.75rem;
+}
+
+.tw-border {
+  border-width: 1px;
 }
 
 .tw-border-0 {
@@ -710,8 +840,8 @@ video {
   border-width: 2px;
 }
 
-.tw-border-4 {
-  border-width: 4px;
+.tw-border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .tw-border-solid {
@@ -723,14 +853,44 @@ video {
   border-color: rgb(30 64 175 / var(--tw-border-opacity));
 }
 
+.tw-border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
 .tw-border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.tw-border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .tw-bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.tw-bg-green-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
+}
+
+.tw-bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
 
 .tw-bg-red-800 {
@@ -753,8 +913,17 @@ video {
      object-position: center;
 }
 
+.tw-p-0 {
+  padding: 0px;
+}
+
 .tw-p-4 {
   padding: 1rem;
+}
+
+.tw-px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .tw-px-5 {
@@ -772,27 +941,34 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.tw-px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.tw-py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .tw-py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
 
-.tw-pt-10 {
-  padding-top: 2.5rem;
+.tw-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.tw-pt-5 {
-  padding-top: 1.25rem;
+.tw-pb-4 {
+  padding-bottom: 1rem;
+}
+
+.tw-pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.tw-pl-3 {
+  padding-left: 0.75rem;
+}
+
+.tw-pr-10 {
+  padding-right: 2.5rem;
+}
+
+.tw-pt-10 {
+  padding-top: 2.5rem;
 }
 
 .tw-pt-20 {
@@ -801,6 +977,16 @@ video {
 
 .tw-text-center {
   text-align: center;
+}
+
+.tw-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.tw-text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .tw-text-5xl {
@@ -813,6 +999,11 @@ video {
   line-height: 1;
 }
 
+.tw-text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .tw-text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -821,26 +1012,6 @@ video {
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.tw-text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.tw-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.tw-text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.tw-text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .tw-font-bold {
@@ -855,17 +1026,22 @@ video {
   font-weight: 500;
 }
 
-.tw-leading-relaxed {
-  line-height: 1.625;
+.tw-font-semibold {
+  font-weight: 600;
 }
 
-.tw-tracking-widest {
-  letter-spacing: 0.1em;
+.tw-leading-relaxed {
+  line-height: 1.625;
 }
 
 .tw-text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
+}
+
+.tw-text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .tw-text-gray-600 {
@@ -878,18 +1054,14 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.tw-text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .tw-text-indigo-500 {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
 }
 
-.tw-opacity-0 {
-  opacity: 0;
+.tw-text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .tw-duration-700 {
@@ -942,10 +1114,31 @@ video {
   margin-left: 7% !important;
 }
 
+.font-family{
+  font-family: "Satisfy", cursive;
+  font-size: 3rem;
+  color: #a30000;
+  background: linear-gradient(120deg, #fff3cd, #fff3cd);
+  background-position: 0 80%;
+  background-size: 100% 20%;
+  background-repeat: no-repeat;
+}
+
+.custom-width-div{
+  max-width: 1250px !important;
+}
+
 @media screen and (max-width: 640px) {
   .div-text{
     margin-top: -22rem;
     margin-left: 3% !important;
+  }
+}
+
+@media screen and (max-width: 790px) {
+  div img{
+    width: 97% !important;
+    /* margin-left: 5px !important; */
   }
 }
 
@@ -968,6 +1161,11 @@ video {
   background-color: rgb(30 58 138 / var(--tw-bg-opacity));
 }
 
+.hover\:tw-bg-indigo-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+
 .hover\:tw-bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -983,12 +1181,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:tw-opacity-100:hover {
-  opacity: 1;
-}
-
 .hover\:tw-duration-500:hover {
   transition-duration: 500ms;
+}
+
+.focus\:tw-border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 
 .focus\:tw-outline-none:focus {
@@ -996,39 +1195,30 @@ video {
   outline-offset: 2px;
 }
 
+.focus\:tw-ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:tw-ring-indigo-200:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
+}
+
 @media not all and (min-width: 768px) {
-  .max-md\:tw-mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .max-md\:tw-mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .max-md\:tw-mt-4 {
-    margin-top: 1rem;
-  }
-
   .max-md\:tw-mt-3 {
     margin-top: 0.75rem;
   }
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:tw-start-0 {
-    inset-inline-start: 0px;
-  }
-
-  .max-sm\:tw-mt-10 {
-    margin-top: 2.5rem;
+  .max-sm\:tw-mb-3 {
+    margin-bottom: 0.75rem;
   }
 
   .max-sm\:tw-ml-0 {
     margin-left: 0px;
-  }
-
-  .max-sm\:tw-mb-3 {
-    margin-bottom: 0.75rem;
   }
 
   .max-sm\:tw-block {
@@ -1052,14 +1242,9 @@ video {
     padding-right: 4rem;
   }
 
-  .max-sm\:tw-px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
-  .max-sm\:tw-py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+  .max-sm\:tw-px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 
   .max-sm\:tw-py-1 {
@@ -1067,34 +1252,14 @@ video {
     padding-bottom: 0.25rem;
   }
 
-  .max-sm\:tw-py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-
-  .max-sm\:tw-px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
-  .max-sm\:tw-px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .max-sm\:tw-px-28 {
-    padding-left: 7rem;
-    padding-right: 7rem;
-  }
-
   .max-sm\:tw-py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
 
-  .max-sm\:tw-px-32 {
-    padding-left: 8rem;
-    padding-right: 8rem;
+  .max-sm\:tw-text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .max-sm\:tw-text-4xl {
@@ -1105,21 +1270,6 @@ video {
   .max-sm\:tw-text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .max-sm\:tw-text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .max-sm\:tw-text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .max-sm\:tw-text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 }
 
@@ -1132,16 +1282,6 @@ video {
     font-size: 3rem;
     line-height: 1;
   }
-
-  .sm\:tw-text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .sm\:tw-text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
 }
 
 @media (min-width: 768px) {
@@ -1151,6 +1291,10 @@ video {
 
   .md\:tw-w-1\/2 {
     width: 50%;
+  }
+
+  .md\:tw-w-1\/4 {
+    width: 25%;
   }
 
   .md\:tw-flex-row {
@@ -1171,20 +1315,24 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:tw-mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:tw-inline-block {
     display: inline-block;
   }
 
+  .lg\:tw-h-auto {
+    height: auto;
+  }
+
+  .lg\:tw-w-1\/2 {
+    width: 50%;
+  }
+
   .lg\:tw-w-full {
     width: 100%;
-  }
-
-  .lg\:tw-w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .lg\:tw-w-1\/3 {
-    width: 33.333333%;
   }
 
   .lg\:tw-max-w-xs {
@@ -1193,6 +1341,15 @@ video {
 
   .lg\:tw-flex-grow {
     flex-grow: 1;
+  }
+
+  .lg\:tw-py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:tw-pl-10 {
+    padding-left: 2.5rem;
   }
 
   .lg\:tw-pr-24 {
