--- a/src/input.css
+++ b/src/input.css
@@ -56,6 +56,10 @@
     max-width: 1250px !important;
 }
 
+.pricing{
+    height: 600px !important;
+    margin-top: 20px !important;
+}
 
 @media screen and (max-width: 640px) {
     .div-text{
