--- a/src/output.css
+++ b/src/output.css
@@ -588,28 +588,8 @@ video {
   }
 }
 
-.tw-pointer-events-none {
-  pointer-events: none;
-}
-
-.tw-absolute {
-  position: absolute;
-}
-
 .tw-relative {
   position: relative;
-}
-
-.tw-right-0 {
-  right: 0px;
-}
-
-.tw-top-0 {
-  top: 0px;
-}
-
-.-tw-m-4 {
-  margin: -1rem;
 }
 
 .tw-mx-3 {
@@ -620,6 +600,10 @@ video {
 .tw-mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.tw-mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .tw-mb-16 {
@@ -634,36 +618,12 @@ video {
   margin-bottom: 1rem;
 }
 
-.tw-mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .tw-mb-8 {
   margin-bottom: 2rem;
 }
 
-.tw-ml-1 {
-  margin-left: 0.25rem;
-}
-
 .tw-ml-3 {
   margin-left: 0.75rem;
-}
-
-.tw-ml-4 {
-  margin-left: 1rem;
-}
-
-.tw-ml-6 {
-  margin-left: 1.5rem;
-}
-
-.tw-ml-auto {
-  margin-left: auto;
-}
-
-.tw-mr-3 {
-  margin-right: 0.75rem;
 }
 
 .tw-mt-1 {
@@ -678,6 +638,10 @@ video {
   margin-top: 5rem;
 }
 
+.tw-mt-24 {
+  margin-top: 6rem;
+}
+
 .tw-mt-28 {
   margin-top: 7rem;
 }
@@ -686,8 +650,12 @@ video {
   margin-top: 1.25rem;
 }
 
-.tw-mt-6 {
-  margin-top: 1.5rem;
+.tw-mt-7 {
+  margin-top: 1.75rem;
+}
+
+.tw-mt-14 {
+  margin-top: 3.5rem;
 }
 
 .tw-mt-3 {
@@ -696,6 +664,10 @@ video {
 
 .tw-mt-32 {
   margin-top: 8rem;
+}
+
+.tw-mt-16 {
+  margin-top: 4rem;
 }
 
 .tw-block {
@@ -718,52 +690,8 @@ video {
   display: none;
 }
 
-.tw-h-10 {
-  height: 2.5rem;
-}
-
-.tw-h-12 {
-  height: 3rem;
-}
-
-.tw-h-4 {
-  height: 1rem;
-}
-
-.tw-h-5 {
-  height: 1.25rem;
-}
-
-.tw-h-6 {
-  height: 1.5rem;
-}
-
 .tw-h-64 {
   height: 16rem;
-}
-
-.tw-h-full {
-  height: 100%;
-}
-
-.tw-w-10 {
-  width: 2.5rem;
-}
-
-.tw-w-12 {
-  width: 3rem;
-}
-
-.tw-w-4 {
-  width: 1rem;
-}
-
-.tw-w-5 {
-  width: 1.25rem;
-}
-
-.tw-w-6 {
-  width: 1.5rem;
 }
 
 .tw-w-96 {
@@ -772,12 +700,6 @@ video {
 
 .tw-w-full {
   width: 100%;
-}
-
-.tw-appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
 }
 
 .tw-flex-col {
@@ -820,16 +742,8 @@ video {
   border-radius: 9999px;
 }
 
-.tw-rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .tw-rounded-xl {
   border-radius: 0.75rem;
-}
-
-.tw-border {
-  border-width: 1px;
 }
 
 .tw-border-0 {
@@ -838,10 +752,6 @@ video {
 
 .tw-border-2 {
   border-width: 2px;
-}
-
-.tw-border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .tw-border-solid {
@@ -853,34 +763,9 @@ video {
   border-color: rgb(30 64 175 / var(--tw-border-opacity));
 }
 
-.tw-border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.tw-border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.tw-border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .tw-bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
-.tw-bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.tw-bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .tw-bg-green-50 {
@@ -888,19 +773,19 @@ video {
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
 }
 
-.tw-bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
-
 .tw-bg-red-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.tw-bg-white {
+.tw-bg-yellow-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
+.tw-bg-yellow-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 252 232 / var(--tw-bg-opacity));
 }
 
 .tw-object-cover {
@@ -913,17 +798,12 @@ video {
      object-position: center;
 }
 
-.tw-p-0 {
-  padding: 0px;
+.tw-p-2 {
+  padding: 0.5rem;
 }
 
 .tw-p-4 {
   padding: 1rem;
-}
-
-.tw-px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .tw-px-5 {
@@ -941,30 +821,18 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.tw-py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 .tw-py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
 
-.tw-py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .tw-pb-4 {
   padding-bottom: 1rem;
-}
-
-.tw-pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.tw-pl-3 {
-  padding-left: 0.75rem;
-}
-
-.tw-pr-10 {
-  padding-right: 2.5rem;
 }
 
 .tw-pt-10 {
@@ -979,16 +847,6 @@ video {
   text-align: center;
 }
 
-.tw-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.tw-text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .tw-text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -999,11 +857,6 @@ video {
   line-height: 1;
 }
 
-.tw-text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .tw-text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1012,6 +865,11 @@ video {
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.tw-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .tw-font-bold {
@@ -1039,11 +897,6 @@ video {
   color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
-.tw-text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .tw-text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1054,14 +907,20 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.tw-text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.tw-text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
+}
+
+.tw-shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .tw-duration-700 {
@@ -1128,6 +987,11 @@ video {
   max-width: 1250px !important;
 }
 
+.pricing{
+  height: 600px !important;
+  margin-top: 20px !important;
+}
+
 @media screen and (max-width: 640px) {
   .div-text{
     margin-top: -22rem;
@@ -1142,8 +1006,21 @@ video {
   }
 }
 
+.hover\:tw-visible:hover {
+  visibility: visible;
+}
+
+.hover\:tw-block:hover {
+  display: block;
+}
+
 .hover\:tw-border-solid:hover {
   border-style: solid;
+}
+
+.hover\:tw-border-blue-800:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(30 64 175 / var(--tw-border-opacity));
 }
 
 .hover\:tw-border-red-800:hover {
@@ -1161,14 +1038,19 @@ video {
   background-color: rgb(30 58 138 / var(--tw-bg-opacity));
 }
 
-.hover\:tw-bg-indigo-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
-}
-
 .hover\:tw-bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:tw-bg-red-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+}
+
+.hover\:tw-text-blue-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .hover\:tw-text-red-800:hover {
@@ -1185,25 +1067,9 @@ video {
   transition-duration: 500ms;
 }
 
-.focus\:tw-border-indigo-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
-}
-
 .focus\:tw-outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:tw-ring-2:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:tw-ring-indigo-200:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(199 210 254 / var(--tw-ring-opacity));
 }
 
 @media not all and (min-width: 768px) {
@@ -1231,6 +1097,10 @@ video {
 
   .max-sm\:tw-rounded-full {
     border-radius: 9999px;
+  }
+
+  .max-sm\:tw-p-1\.5 {
+    padding: 0.375rem;
   }
 
   .max-sm\:tw-p-3 {
@@ -1274,10 +1144,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:tw-w-1\/2 {
-    width: 50%;
-  }
-
   .sm\:tw-text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1291,10 +1157,6 @@ video {
 
   .md\:tw-w-1\/2 {
     width: 50%;
-  }
-
-  .md\:tw-w-1\/4 {
-    width: 25%;
   }
 
   .md\:tw-flex-row {
