--- a/src/output.css
+++ b/src/output.css
@@ -588,8 +588,24 @@ video {
   }
 }
 
+.tw-absolute {
+  position: absolute;
+}
+
 .tw-relative {
   position: relative;
+}
+
+.tw-right-0 {
+  right: 0px;
+}
+
+.tw-top-0 {
+  top: 0px;
+}
+
+.tw-z-10 {
+  z-index: 10;
 }
 
 .tw-mx-3 {
@@ -608,10 +624,6 @@ video {
 
 .tw-mb-16 {
   margin-bottom: 4rem;
-}
-
-.tw-mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .tw-mb-4 {
@@ -634,6 +646,14 @@ video {
   margin-top: 2.5rem;
 }
 
+.tw-mt-14 {
+  margin-top: 3.5rem;
+}
+
+.tw-mt-16 {
+  margin-top: 4rem;
+}
+
 .tw-mt-20 {
   margin-top: 5rem;
 }
@@ -646,28 +666,16 @@ video {
   margin-top: 7rem;
 }
 
+.tw-mt-4 {
+  margin-top: 1rem;
+}
+
 .tw-mt-5 {
   margin-top: 1.25rem;
 }
 
 .tw-mt-7 {
   margin-top: 1.75rem;
-}
-
-.tw-mt-14 {
-  margin-top: 3.5rem;
-}
-
-.tw-mt-3 {
-  margin-top: 0.75rem;
-}
-
-.tw-mt-32 {
-  margin-top: 8rem;
-}
-
-.tw-mt-16 {
-  margin-top: 4rem;
 }
 
 .tw-block {
@@ -692,6 +700,10 @@ video {
 
 .tw-h-64 {
   height: 16rem;
+}
+
+.tw-h-full {
+  height: 100%;
 }
 
 .tw-w-96 {
@@ -763,6 +775,11 @@ video {
   border-color: rgb(30 64 175 / var(--tw-border-opacity));
 }
 
+.tw-bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .tw-bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
@@ -831,10 +848,6 @@ video {
   padding-bottom: 6rem;
 }
 
-.tw-pb-4 {
-  padding-bottom: 1rem;
-}
-
 .tw-pt-10 {
   padding-top: 2.5rem;
 }
@@ -865,11 +878,6 @@ video {
 .tw-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.tw-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .tw-font-bold {
@@ -910,11 +918,6 @@ video {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.tw-text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 
 .tw-shadow-sm {
@@ -984,12 +987,35 @@ video {
 }
 
 .custom-width-div{
-  max-width: 1250px !important;
+  max-width: 1180px !important;
+  margin-left: 1.4rem;
 }
 
 .pricing{
   height: 600px !important;
   margin-top: 20px !important;
+}
+
+/* Image-hover */
+
+.div-img{
+  transform: scale(1.5);
+  transition: all 1s;
+}
+
+.div-main:hover .div-img{
+  transform: scale(1);
+}
+
+.div-sub{
+  opacity: 0;
+  color: white;
+  transition: all 1s;
+}
+
+.div-main:hover .div-sub{
+  opacity: 1;
+  background: rgb(0, 0, 0, 0.448);
 }
 
 @media screen and (max-width: 640px) {
@@ -999,19 +1025,20 @@ video {
   }
 }
 
+/* @media screen and (max-width: 790px) {
+    .div-main{
+        width: 97% !important;
+    }
+} */
+
 @media screen and (max-width: 790px) {
-  div img{
-    width: 97% !important;
-    /* margin-left: 5px !important; */
+  .div-main{
+    width: 15rem;
   }
 }
 
 .hover\:tw-visible:hover {
   visibility: visible;
-}
-
-.hover\:tw-block:hover {
-  display: block;
 }
 
 .hover\:tw-border-solid:hover {
@@ -1038,14 +1065,14 @@ video {
   background-color: rgb(30 58 138 / var(--tw-bg-opacity));
 }
 
-.hover\:tw-bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:tw-bg-red-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+}
+
+.hover\:tw-bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:tw-text-blue-800:hover {
